force-app/main/default/objects/valt__Valooto_Quote_Workflow__c/fields/valt__Status_Date__c.field-meta.xml
<CustomField>
    <fullName>valt__Status_Date__c</fullName>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>