force-app/main/default/objects/valt__Valooto_Quote_Workflow__c/fields/valt__Step__c.field-meta.xml
<CustomField>
    <fullName>valt__Step__c</fullName>
    <label>Step</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>